--- a/media.html
+++ b/media.html
@@ -8,9 +8,9 @@
 <body>
   <h1>Resume/Portfolio</h1>
   <nav>
-    <a href = "https://rduong11.github.io/ITMD_361_proj1/index.html">About Me</a>
-    <a href = "https://rduong11.github.io/ITMD_361_proj1/resume.html">Resume</a>
-    <a href = "https://rduong11.github.io/ITMD_361_proj1/media.html">Favorite Media</a>
+    <a href = "index.html">About Me</a>
+    <a href = "resume.html">Resume</a>
+    <a href = "media.html">Favorite Media</a>
   </nav>
 </body>
 </html>
