--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <h1>About Me!</h1>
   <nav>
-    <a href = "">About Me</a>
-    <a href = "">Resume</a>
-    <a href = "">Favorite Media</a>
+    <a href = "index.html">About Me</a>
+    <a href = "resume.html">Resume</a>
+    <a href = "media.html">Favorite Media</a>
   </nav>
 </body>
 </html>
