--- a/resume.html
+++ b/resume.html
@@ -8,9 +8,9 @@
 <body>
   <h1>Resume/Portfolio</h1>
   <nav>
-    <a href = "index.html">About Me</a>
-    <a href = "resume.html">Resume</a>
-    <a href = "media.html">Favorite Media</a>
+    <a href = "index.html">About Me | </a>
+    <a href = "resume.html">Resume | </a>
+    <a href = "media.html">Pop Culture Fixations | </a>
   </nav>
 </body>
 </html>
