--- a/media.html
+++ b/media.html
@@ -6,11 +6,12 @@
     <title>Favorite Media</title>
 </head>
 <body>
-  <h1>Resume/Portfolio</h1>
+  <h1>My Favorite Media</h1>
+  <h3>This includes music, movies, and fashion.</h3>
   <nav>
-    <a href = "index.html">About Me</a>
-    <a href = "resume.html">Resume</a>
-    <a href = "media.html">Favorite Media</a>
+    <a href = "index.html">About Me | </a>
+    <a href = "resume.html">Resume | </a>
+    <a href = "media.html">Pop Culture Fixations | </a>
   </nav>
 </body>
 </html>
