--- a/resume.html
+++ b/resume.html
@@ -6,11 +6,85 @@
     <title>Resume</title>
 </head>
 <body>
-  <h1>Resume/Portfolio</h1>
+  <h1>Raymond Duong</h1>
+  <h2>Contact</h2>
+  <ul>
+    <li>raymondduong12@gmail.com</li>
+    <li>773-551-7071</li>
+    <li><a href = "https://www.linkedin.com/in/raymond-duong-863308242/">LinkedIn</a></li>
+  </ul>
   <nav>
     <a href = "index.html">About Me | </a>
     <a href = "resume.html">Resume | </a>
     <a href = "media.html">Pop Culture Fixations | </a>
   </nav>
+  
+  <h2>About Me</h2>
+  <p><strong>Proficient Technical Languages</strong>: Python, Java, SQL, JavaScript, React.js, HTML</p>
+  <p><strong>Previous Experience</strong>: C++, OCaml</p>
+  <p><strong>Interests</strong>: Powerlifting, Fashion, Music, Video Games, Skateboarding</p>
+  
+  <h2>Education</h2>
+  <p><strong>Illinois Institute of Technology</strong></p>
+  <ul>
+    <li>Chicago, IL (2021-Present)</li>
+    <li>Start date: Fall 2021; Expected graduation date: Spring 2025</li>
+    <li>Enrolled in the Undergraduate Bachelor of Science in Computer Science program</li>
+    <li>Relevant courses: Data Structures and Algorithms, Assembly Language Programming, Systems Program-
+        ming, Operating Systems, Introduction to AI, Database Organization, Calculus 1-3, Linear Algebra</li>
+  </ul>
+
+  <h2>Work Experience</h2>
+  <p><strong>Mosaic</strong></p>
+  <p>Director of Outreach</p>
+  <ul>
+    <li>Chicago, IL (Dec 2023 - May 2024)</li>
+    <li>Startup company accepted into IIT's Kaplan Institute Startup Accelerator</li>
+    <li>Comprehensive curriculum of fostering a startup company, cultivating entrepreneurship, business modeling, customer discovery, etc.</li>
+    <li>Sent outreach messages to relevant companies, engineering institutions' career services, and engineeringstudent organizations following thorough research</li>
+    <li>Pitching to other students, business executives, and entrepreneurs</li>
+    <li>Relevant skills: Communication, Corporate and Community Outreach, Entrepreneurship, Data Architecture, Creative Direction</li>
+  </ul>
+  <h2>Personal Projects</h2>
+  <p><strong>New York Times Game Clones</strong></p>
+  <ul>
+    <li>Jun - Aug 2023</li>
+    <li>Implemented using HTML, Vanilla JavaScript for user interaction, and styled with CSS</li>
+    <li>Recreated NYT's Wordle, Connections, Mini Crossword, and Strands as an anniversary gift</li>
+  </ul>
+  <p><strong>Sudoku Puzzle Solver with AI</strong></p>
+  <ul>
+    <li>Nov - Dec 2023</li>
+    <li>Implemented a fully functional sudoku solver in Python</li>
+    <li>Converts user-inputted .csv files into Sudoku grids via command line</li>
+    <li>Algorithm for solving utilizes hash maps and Constraint Satisfaction Problems with backtracking, forward-checking, and MRV heuristics</li>
+    <li>Developed in respective Introduction to AI class</li>
+  </ul>
+  <p><strong>Tic-Tac-Toe with AI</strong></p>
+  <ul>
+    <li>Oct - Nov 2023</li>
+    <li>Implemented a menu-based tic-tac-toe game in Python</li>
+    <li>Player has 4 options, to play versus a computer or spectate a computer versus another computer. Respectively, these two options had their own Alpha-Beta pruning version. All of these options utilizes a Minimax algorithm</li>
+    <li>Developed in respective Introduction to AI class</li>
+  </ul>
+  <p><strong>Text-Based Blackjack Game</strong></p>
+  <ul>
+    <li>June 2023</li>
+    <li>Implemented a simple text menu-based game of Blackjack in Python</li>
+    <li>Utilizes hash maps</li>
+  </ul>
+  <p><strong>University Portal</strong></p>
+  <ul>
+    <li>Jan - May 2023</li>
+    <li>Implemented using Java for the application and SQL for loading and testing queries/data</li>
+    <li>Semester-long project for respective Database and Organization class</li>
+    <li>Portal app designed for both students and teachers, where they can access school related things such as a task schedule for classes, a store to purchase textbooks, etc.</li>
+  </ul>
+  <p><strong>Investing Budget Calculator</strong></p>
+  <ul>
+    <li>November 2021</li>
+    <li>Implemented a Python algorithm to calculate investment percentages based on given income</li>
+    <li>Features a text-based menu that asks user for an income, following percentages that budget investing options</li>
+  </ul>
 </body>
 </html>
