--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
   <h1>Raymond Duong</h1>
   <h2>Contact</h2>
   <ul>
-    <li>raymondduong12@gmail.com</li>
+    <li><a href="mailto: raymondduong12@gmail.com">raymondduong12@gmail.com</a></li>
     <li>773-551-7071</li>
     <li><a href = "https://www.linkedin.com/in/raymond-duong-863308242/">LinkedIn</a></li>
   </ul>
