--- a/media.html
+++ b/media.html
@@ -6,6 +6,11 @@
     <title>Favorite Media</title>
 </head>
 <body>
+  <nav>
+    <a href = "index.html">About Me | </a>
+    <a href = "resume.html">Resume | </a>
+    <a href = "media.html">Pop Culture Fixations | </a>
+  </nav>
   <h1>My Favorite Media</h1>
   <h3>This includes music, movies, and fashion.</h3>
   <nav>
