--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <li>Healthcare infrastructure that has Vietnamese-English speaking workers</li>
     <li>Lots of boba restaurants/cafes; boba or bubble tea is a sweet drink that combines tea with milk and boba, which is basically tapioca pearls</li>
   </ul>
-
-  <!-- IMAGE HERE -->
+  <img src = "argyle_image.jpg" alt="Red Asia on Argyle sign on train with lion dancers and community">
   <p>Besides being surrounded by this community, I actually went to elementary school a couple blocks from here too.</p>
   <p>From Pre-K through 8th grade, my parents enrolled me in a Catholic private school called St. Thomas of Canterbury.</p>
   <p>Often times after school I would go to a summer camp called Vietnamese Association of Illinois, or go to my grandma's house a couple blocks down.</p>
@@ -49,6 +48,11 @@
   <p>At my school, there were a lot of clubs, but by far the most populated were the ethnic clubs.</p>
   <p>Every year around mid-March, Lane hosts an event called International Days/Nights.</p>
   <p>It consists of all the ethnic clubs coming together to perform a choreographed ethnic dance that represents their culture.</p>
+  <video controls>
+    <source src = "CC_video.mp4" type ="video/mp4">
+    <source src = "movie.ogg" type = "video/ogg">
+    Your browser does not support the video tag.
+  </video>
   <!-- VIDEO HERE -->
   <p>Typically, clubs will start their tryouts for new members around October.</p>
   <p>From this time until March, they will come up with choreography and practice, with practices ranging up to 1 hour to 3 hours depending on the proximity of the performance date.</p>
