--- a/media.html
+++ b/media.html
@@ -12,7 +12,46 @@
     <a href = "media.html">Pop Culture Fixations | </a>
   </nav>
   <h1>My Favorite Media</h1>
-  <h3>This includes music, movies, and fashion.</h3>
-  
+  <h2>Music</h2>
+  <p>My favorite music genres are Hip-Hop, RnB, Indie, Alternative RnB, and "Avante-Garde Rap"</p>
+  <p>Here are some of my favorite albums(in no particular order) of all time: </p>
+  <ul>
+    <li><em>Blonde</em> by Frank Oceean</li>
+    <li><em>Whole Lotta Red</em> by Playboi Carti</li>
+    <li><em>ye</em> by Kanye West</li>
+    <li><em>The Miseducation of Lauryn Hill</em>Ms. Lauryn Hill</li>
+    <li><em>ASTROWORLD</em> by Travis Scott</li>
+  </ul>
+  <p>There are too many more that I want to list but it would take up the whole screen... </p>
+
+  <h2>Films/Shows</h2>
+  <p>I am a sucker for psychological thrillers/horrors. Occasionally though, I love watching comedies/sitcoms and certain animated shows.</p>
+  <p>Here are some of my favorite films/tv shows of all time: </p>
+  <h1>Films</h1>
+  <ul>
+    <li><em>Scott Pilgrim vs. The World</em></li>
+    <li><em>Hereditary</em></li>
+    <li><em>Midsommar</em></li>
+    <li><em>Moonlight</em></li>
+    <li><em>Waves</em></li>
+    <li><em>The Dark Knight Trilogy</em></li>
+  </ul>
+  <h1>TV Shows</h1>
+  <ul>
+    <li><em>Malcolm in the Middle</em></li>
+    <li><em>Regular Show</em></li>
+    <li><em>That 70's Show</em></li>
+    <li><em>Breaking Bad</em></li>
+    <li><em>The Office</em></li>
+    <li><em>Parks and Recreation</em></li>
+  </ul>
+  <h2>Video Games</h2>
+  <p>These video games are what I grew up on. Nowadays it's harder to find time to play them ;[ </p>
+  <ul>
+    <li><em>Teamfight Tactics</em></li>
+    <li><em>League of Legends</em></li>
+    <li><em>Binding of Isaac</em></li>
+    <li><em>Literally any flash game that existed (RIP)</em></li>
+  </ul>
 </body>
 </html>
