--- a/media.html
+++ b/media.html
@@ -14,20 +14,22 @@
   <h1>My Favorite Media</h1>
   <h2>Music</h2>
   <p>My favorite music genres are Hip-Hop, RnB, Indie, Alternative RnB, and "Avante-Garde Rap"</p>
+  <img src = "blonde.jpeg" alt = "Blonde by Frank Ocean album cover">
   <p>Here are some of my favorite albums(in no particular order) of all time: </p>
   <ul>
     <li><em>Blonde</em> by Frank Oceean</li>
     <li><em>Whole Lotta Red</em> by Playboi Carti</li>
     <li><em>ye</em> by Kanye West</li>
-    <li><em>The Miseducation of Lauryn Hill</em>Ms. Lauryn Hill</li>
+    <li><em>The Miseducation of Lauryn Hill</em> by Ms. Lauryn Hill</li>
     <li><em>ASTROWORLD</em> by Travis Scott</li>
   </ul>
   <p>There are too many more that I want to list but it would take up the whole screen... </p>
 
   <h2>Films/Shows</h2>
   <p>I am a sucker for psychological thrillers/horrors. Occasionally though, I love watching comedies/sitcoms and certain animated shows.</p>
+  <img src = "moonlight.jpeg" alt = "Moonlight scene of young character at the beach">
   <p>Here are some of my favorite films/tv shows of all time: </p>
-  <h1>Films</h1>
+  <h3>Films</h3>
   <ul>
     <li><em>Scott Pilgrim vs. The World</em></li>
     <li><em>Hereditary</em></li>
@@ -36,7 +38,7 @@
     <li><em>Waves</em></li>
     <li><em>The Dark Knight Trilogy</em></li>
   </ul>
-  <h1>TV Shows</h1>
+  <h3>TV Shows</h3>
   <ul>
     <li><em>Malcolm in the Middle</em></li>
     <li><em>Regular Show</em></li>
@@ -46,6 +48,7 @@
     <li><em>Parks and Recreation</em></li>
   </ul>
   <h2>Video Games</h2>
+  <img src = "boxhead.jpeg" alt = "Boxhead characters start-up screen">
   <p>These video games are what I grew up on. Nowadays it's harder to find time to play them ;[ </p>
   <ul>
     <li><em>Teamfight Tactics</em></li>
