changed nav to bulletin points

--- a/resume.html
+++ b/resume.html
@@ -7,9 +7,11 @@
 </head>
 <body>
   <nav>
-    <a href = "index.html">About Me | </a>
-    <a href = "resume.html">Resume | </a>
-    <a href = "media.html">Pop Culture Fixations | </a>
+    <ul>
+      <li><a href = "index.html">About Me</a></li>
+      <li><a href = "resume.html">Resume</a></li>
+      <li><a href = "media.html">Pop Culture Fixations</a></li>
+    </ul>
   </nav>
   <h1>Raymond Duong</h1>
   <h2>Contact</h2>
