--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
   <nav>
-    <a href = "index.html">About Me | </a>
-    <a href = "resume.html">Resume | </a>
-    <a href = "media.html">Pop Culture Fixations | </a>
+    <ul>
+      <li><a href = "index.html">About Me</a></li>
+      <li><a href = "resume.html">Resume</a></li>
+      <li><a href = "media.html">Pop Culture Fixations</a></li>
+    </ul>
   </nav>
   <h1>About Me!</h1>
   <p>Hello, my name is Raymond Duong and I'm a 4th year CS major. </p>
