forgot to link the new media folder...

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li>Healthcare infrastructure that has Vietnamese-English speaking workers</li>
       <li>Lots of boba restaurants/cafes; boba or bubble tea is a sweet drink that combines tea with milk and boba, which is basically tapioca pearls</li>
     </ul>
-    <img src="argyle_resized.jpg" alt="Red Asia on Argyle sign on train with lion dancers and community">
+    <img src="media/argyle_resized.jpg" alt="Red Asia on Argyle sign on train with lion dancers and community">
     <p>Besides being surrounded by this community, I actually went to elementary school a couple blocks from here too.</p>
     <p>From Pre-K through 8th grade, my parents enrolled me in a Catholic private school called St. Thomas of Canterbury.</p>
     <p>Often times after school I would go to a summer camp called Vietnamese Association of Illinois, or go to my grandma's house a couple blocks down.</p>
@@ -56,7 +56,7 @@
     <p>Every year around mid-March, Lane hosts an event called International Days/Nights.</p>
     <p>It consists of all the ethnic clubs coming together to perform a choreographed ethnic dance that represents their culture.</p>
     <video controls>
-      <source src="CC_video.mp4" type="video/mp4">
+      <source src="media/CC_video.mp4" type="video/mp4">
       <source src="movie.ogg" type="video/ogg">
       Your browser does not support the video tag.
     </video>
