accidentally cut off the end of resume

--- a/resume.html
+++ b/resume.html
@@ -62,4 +62,9 @@
     <ul>
       <li>Jun - Aug 2023</li>
       <li>Implemented using HTML, Vanilla JavaScript for user interaction, and styled with CSS</li>
-      <li>Recreated NYT's Wordle, Connections, Mini Crossword, and
+      <li>Recreated NYT's Wordle, Connections, Mini Crossword</li>
+    </ul>
+  </section>
+</body>
+</html>
+
