--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p>Every year around mid-March, Lane hosts an event called International Days/Nights.</p>
     <p>It consists of all the ethnic clubs coming together to perform a choreographed ethnic dance that represents their culture.</p>
     <video controls>
-      <source src="media/CC_video.mp4" type="video/mp4">
+      <source src="media/cc_video.mp4" type="video/mp4">
       <source src="movie.ogg" type="video/ogg">
       Your browser does not support the video tag.
     </video>
